--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!--Structure-->
 
            
-		<div id="footer">
+		<div id="footer">hello world
         </div>
 	</div>
     </div>
@@ -100,8 +100,6 @@
 			});
 		});
 	</script>
-
-hello world
 	
 </body>
 </html>
