--- a/index.html
+++ b/index.html
@@ -1,105 +1,304 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
+  <title>Home</title>
+  <meta charset="utf-8">
+  <meta name="format-detection" content="telephone=no"/>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/grid.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/booking.css"/>
+  <link rel="stylesheet" href="css/jquery.fancybox.css"/>
+  <link rel="stylesheet" href="css/owl-carousel.css"/>
 
-	<title>WCMPTM</title>
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery-migrate-1.2.1.js"></script>
 
-	<!--[if lt IE 7 ]> <html class="ie6"> <![endif]-->
-	<!--[if IE 7 ]>    <html class="ie7"> <![endif]-->
-	<!--[if IE 8 ]>    <html class="ie8"> <![endif]-->
-	<!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
-	<!--[if (gt IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
-	
-	<!--Stylesheets-->
-	<link rel="stylesheet" href="css/style.css">
-	
+  <!--[if lt IE 9]>
+  <html class="lt-ie9">
+  <div style=' clear: both; text-align:center; position: relative;'>
+    <a href="http://windows.microsoft.com/en-US/internet-explorer/..">
+      <img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820"
+           alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
+    </a>
+  </div>
+  <script src="js/html5shiv.js"></script>
+  <![endif]-->
+
+  <script src='js/device.min.js'></script>
 </head>
+
 <body>
+<div class="page">
+  <!--========================================================
+                            HEADER
+  =========================================================-->
+  <header class="vide" data-vide-bg="video/video-bg">
+    <div class="container vide_content">
+      <div class="brand">
+        <img src="images/logo.png" alt=""/>
 
-	<!--Structure-->
+        <h1 class="brand_name">
+          <a href="./">
+            CreativeZone
+          </a>
+        </h1>
+        <p class="brand_slogan">
+          web design studio
+        </p>
+      </div>
 
-           
-		<div id="footer">hello world
+      <h2>Professional web performance </h2>
+
+      <h3>Сreating something special for each customer</h3>
+
+      <form id="bookingForm" class="booking-form">
+        <div class="tmInput">
+          <input name="Name" placeHolder="Name" type="text" data-constraints='@NotEmpty @Required @AlphaSpecial'>
         </div>
-	</div>
+        <div class="tmInput">
+          <input name="Email" placeHolder="E - mail " type="text" data-constraints="@NotEmpty @Required @Email">
+        </div>
+        <div class="tmInput">
+          <input name="Phone" placeHolder="Phone" type="text" data-constraints="@NotEmpty @Required @Phone">
+        </div>
+        <div class="booking-form_controls">
+          <a href="#" class="btn" data-type="submit">Get Started Now!</a>
+        </div>
+      </form>
     </div>
-	
-	
+  </header>
+  <!--========================================================
+                            CONTENT
+  =========================================================-->
+  <main>
+    <section class="well">
+      <div class="container center">
+        <h2>
+          Our creative team consists of the experts <br/>
+          skilled in all areas of web design
+        </h2>
+        <hr/>
+        <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et <br/>
+           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+           commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+           nulla pariatur.
+        </p>
 
-	
-	<!--JavaScript Libraries-->
-	<script src="lib/jquery.min.v1.10.2.js"></script>
-	<script src="lib/d3.v3.min.js"></script>
-	<script src="lib/topojson.js"></script>
-	<script src="lib/queue.min.js"></script>
-	
-	
-	<!--Browser Detection for IE-->
-	<script>
-		
-		$('body').ajaxStart(function() {
-			$(this).css({'cursor':'wait'})
-		}).ajaxStop(function() {
-			$(this).css({'cursor':'auto'})
-		});
-		
-		var isIE;
-		(function ($) {
-			"use strict";
+        <div class="row">
+          <div class="grid_4">
+            <div class="lazy-img" style="padding-bottom:70.27027027027027%;">
+              <img data-src="images/page-1_img01.jpg" src="#" alt=""/>
+            </div>
+            <h3 class="primary">Sam Kromstain</h3>
 
-			// Detecting IE
-			var browser;
-			var oldIE;
-			if ($('html').is('.ie6, .ie7, .ie8')) {
-				isIE = true; 
-				alert("This site will only function in Internet Explorer Version 9 and above. "+
-				"To view, please update your version of Internet Explorer. This site is best viewed in Chrome or Firefox.");
-			} else if ($('html').is('.ie9')){
-				isIE = true;
-			} else {
-				isIE = false;
-			}
+            <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+               etdolore magna aliqua. </p>
+          </div>
+          <div class="grid_4">
+            <div class="lazy-img" style="padding-bottom:70.27027027027027%;">
+              <img data-src="images/page-1_img02.jpg" src="#" alt=""/>
+            </div>
+            <h3 class="primary">Alan Smith</h3>
 
-			}(jQuery));
-		</script>
-		
-		<!-- Google Analytics Code -->
-		
-	
-	
-	<!--Main Scripts-->
-	<script src="js/map.js"></script>
-	<script src="js/main.js"></script>
-   
- 
-    <!-- Code to transition the page smoothly to the about section -->
-    <script type="text/javascript">
-		jQuery(document).ready(function($){
-			$('body').plusAnchor({
-				easing: 'easeInOutExpo',
-				offsetTop: -20,
-				speed: 1000,
-				onInit: function( base ) {
+            <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+               etdolore magna aliqua. </p>
+          </div>
+          <div class="grid_4">
+            <div class="lazy-img" style="padding-bottom:70.27027027027027%;">
+              <img data-src="images/page-1_img03.jpg" src="#" alt=""/>
+            </div>
+            <h3 class="primary">John Franklin </h3>
 
-					if ( base.initHash != '' && $(base.initHash).length > 0 ) {
-						window.location.hash = 'hash_' + base.initHash.substring(1);
-						window.scrollTo(0, 0);
-		
-						$(window).load( function() {
-		
-							timer = setTimeout(function() {
-								$(base.scrollEl).animate({
-									scrollTop: $( base.initHash ).offset().top
-								}, base.options.speed, base.options.easing);
-							}, 1400); // setTimeout
-		
-						}); // window.load
-					}; // if window.location.hash
-		
-				} // onInit
-			});
-		});
-	</script>
-	
+            <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+               etdolore magna aliqua. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="parallax center bg-secondary2" data-url="images/parallax.jpg" data-mobile="true" data-speed="0.5">
+      <div class="well3">
+        <div class="container">
+          <h2>
+            Best Joomla templates, WordPress themes <br/>
+            and free Joomla modules
+          </h2>
+          <hr/>
+          <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <br/>
+             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+             ea
+             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+             nulla pariatur.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="well well__ins1 center">
+      <div class="container">
+        <div class="row">
+          <div class="grid_4">
+            <div class="flaticon-toilets1"></div>
+            <hr/>
+            <h3>WE ARE CREATIVE</h3>
+
+            <p>Lorem ipsum dolor sit amet conse ctetur <br/> adipisicing elit, sed do eiusmod tempor incididunt ut
+               labore
+               et </p>
+          </div>
+          <div class="grid_4">
+            <div class="flaticon-coffee69"></div>
+            <hr/>
+            <h3>WE ARE MODERN</h3>
+
+            <p>Lorem ipsum dolor sit amet conse ctetur <br/> adipisicing elit, sed do eiusmod tempor incididunt ut
+               labore
+               et </p>
+          </div>
+          <div class="grid_4">
+            <div class="flaticon-hotel70"></div>
+            <hr/>
+            <h3>WE ARE EXPERTS</h3>
+
+            <p>Lorem ipsum dolor sit amet conse ctetur <br/> adipisicing elit, sed do eiusmod tempor incididunt ut
+               labore
+               et </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="thumb-container">
+      <div class="item">
+        <a class="lazy-img thumb" style="padding-bottom:73.17073170731707%;" href="images/page-1_img04_original.jpg">
+          <img data-src="images/page-1_img04.jpg" src="#" alt=""/>
+          <span class="thumb_overlay"></span>
+        </a>
+      </div>
+      <div class="item">
+        <a class="lazy-img thumb" style="padding-bottom:73.17073170731707%;" href="images/page-1_img05_original.jpg">
+          <img data-src="images/page-1_img05.jpg" src="#" alt=""/>
+          <span class="thumb_overlay"></span>
+        </a>
+      </div>
+      <div class="item">
+        <a class="lazy-img thumb" style="padding-bottom:73.17073170731707%;" href="images/page-1_img06_original.jpg">
+          <img data-src="images/page-1_img06.jpg" src="#" alt=""/>
+          <span class="thumb_overlay"></span>
+        </a>
+      </div>
+      <div class="item">
+        <a class="lazy-img thumb" style="padding-bottom:73.17073170731707%;" href="images/page-1_img07_original.jpg">
+          <img data-src="images/page-1_img07.jpg" src="#" alt=""/>
+          <span class="thumb_overlay"></span>
+        </a>
+      </div>
+      <div class="item">
+        <a class="lazy-img thumb" style="padding-bottom:73.17073170731707%;" href="images/page-1_img08_original.jpg">
+          <img data-src="images/page-1_img08.jpg" src="#" alt=""/>
+          <span class="thumb_overlay"></span>
+        </a>
+      </div>
+    </section>
+
+    <section class="well">
+      <div class="container center">
+        <h2>testimonials</h2>
+        <hr/>
+        <div class="owl-carousel">
+          <div class="item">
+            <blockquote>
+              <img src="images/page-1_img13.jpg" alt=""/>
+
+              <p><q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et <br/>
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum
+                    dolore eu fugiat nulla pariatur.</q></p>
+
+              <h3 class="primary"><cite>Michael Freeman</cite></h3>
+            </blockquote>
+          </div>
+          <div class="item">
+            <blockquote>
+              <img src="images/page-1_img09.jpg" alt=""/>
+
+              <p><q>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et <br/>
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum
+                    dolore eu fugiat nulla pariatur.</q></p>
+
+              <h3 class="primary"><cite>sed do eiusmod</cite></h3>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+
+      <div class="container center">
+        <ul class="flex-list">
+          <li><img src="images/page-1_img10.jpg" alt=""/></li>
+          <li><img src="images/page-1_img11.jpg" alt=""/></li>
+          <li><img src="images/page-1_img12.jpg" alt=""/></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="well2 bg-secondary">
+      <div class="container center">
+        <div class="row">
+          <div class="grid_8 preffix_2">
+            <h2>Subscribe</h2>
+
+            <form id="subscribe-form" class="subscribe-form">
+
+              <label class="email">
+                <input type="email" value="E - mail">
+                <span class="error">*Invalid email.</span>
+                <span class="success">Your subscription request has been sent!</span>
+              </label>
+              <a class="btn" data-type="submit" href="#">Subscribe</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!--========================================================
+                            FOOTER
+  =========================================================-->
+  <footer>
+    <div class="parallax" data-url="images/parallax2.jpg" data-mobile="true" data-speed="0.5 " data-direction="inverted">
+      <div class="well4">
+        <div class="container center wow fadeInUp" data-wow-delay="0.2s">
+          <hr/>
+          <h2>Professional web performance </h2>
+
+          <h3>Сreating something special for each customer</h3>
+          <a class="btn" href='#'>Get Started Now!</a>
+
+          <div class="copyright">
+            © <span id="copyright-year"></span> Your Logo. All Rights Reserved
+            <!-- {%FOOTER_LINK} -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="well5 center">
+      <div class="container">
+        <a href='#'><img src="images/tm-logo.png" alt="Tempalte Monster"/></a>
+      </div>
+    </div>
+
+  </footer>
+</div>
+
+<script src="js/script.js"></script>
+<!-- coded by Diversant -->
 </body>
 </html>
