--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </p>
       </div>
 
-      <h2>Professional web performance </h2>
+      <h2>Where Can My Passport Take Me?</h2>
 
-      <h3>Сreating something special for each customer</h3>
+      <h3>Launching soon!</h3>
 
       <form id="bookingForm" class="booking-form">
         <div class="tmInput">
