--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
         <h1 class="brand_name">
           <a href="./">
-            CreativeZone
+            WCMPTM?
           </a>
         </h1>
-        <p class="brand_slogan">
+        <!--<p class="brand_slogan">
           web design studio
-        </p>
+        </p>-->
       </div>
 
       <h2>Where Can My Passport Take Me?</h2>
