--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <input name="Phone" placeHolder="Phone" type="text" data-constraints="@NotEmpty @Required @Phone">
         </div>
         <div class="booking-form_controls">
-          <a href="#" class="btn" data-type="submit">Get Started Now!</a>
+          <a href="#" class="btn" data-type="submit">Get Notified!</a>
         </div>
       </form>
     </div>
@@ -71,7 +71,7 @@
   <!--========================================================
                             CONTENT
   =========================================================-->
-  <main>
+  <!--<main>
     <section class="well">
       <div class="container center">
         <h2>
@@ -268,11 +268,11 @@
       </div>
     </section>
   </main>
-
+-->
   <!--========================================================
                             FOOTER
   =========================================================-->
-  <footer>
+ <!-- <footer>
     <div class="parallax" data-url="images/parallax2.jpg" data-mobile="true" data-speed="0.5 " data-direction="inverted">
       <div class="well4">
         <div class="container center wow fadeInUp" data-wow-delay="0.2s">
@@ -281,11 +281,11 @@
 
           <h3>Сreating something special for each customer</h3>
           <a class="btn" href='#'>Get Started Now!</a>
-
+-->
           <div class="copyright">
-            © <span id="copyright-year"></span> Your Logo. All Rights Reserved
+            © <span id="copyright-year"></span> WCMPTM. All Rights Reserved
             <!-- {%FOOTER_LINK} -->
-          </div>
+         <!-- </div>
         </div>
       </div>
     </div>
@@ -297,8 +297,8 @@
 
   </footer>
 </div>
-
+-->
 <script src="js/script.js"></script>
-<!-- coded by Diversant -->
+
 </body>
 </html>
