--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 </style>
 <div id="mc_embed_signup">
 <form action="//wherecanmypassporttakeme.us12.list-manage.com/subscribe/post?u=adc90a235fcf3f25aed7dc22b&amp;id=2631308f60" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
+    <div id="mc_embed_signup_scroll" style="color: #636363">
 	<h2>Get notified when we launch !</h2>
-<div class="indicates-required"><span class="asterisk">*</span>required</div>
-<div class="mc-field-group">
+<div class="indicates-required" style="color: #636363"><span class="asterisk">*</span>required</div>
+<div class="mc-field-group" style="color: #636363">
 	<label for="mce-EMAIL">Your Email Address  <span class="asterisk">*</span>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
-<div class="mc-field-group">
+<div class="mc-field-group" style="color: #636363">
 	<label for="mce-FCOUNTRY">Which country are you from? </label>
 	<input type="text" value="" name="FCOUNTRY" class="" id="mce-FCOUNTRY">
 </div>
