--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 <div id="mc_embed_signup">
 <form action="//wherecanmypassporttakeme.us12.list-manage.com/subscribe/post?u=adc90a235fcf3f25aed7dc22b&amp;id=2631308f60" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll" style="color: #636363">
-	<h2>Get notified when we launch !</h2>
+	<h2 style="color: #636363">Get notified when we launch !</h2>
 <div class="indicates-required" style="color: #636363"><span class="asterisk">*</span>required</div>
 <div class="mc-field-group" style="color: #636363">
-	<label for="mce-EMAIL">Your Email Address  <span class="asterisk">*</span>
+	<label for="mce-EMAIL" style="color: #636363">Your Email Address  <span class="asterisk">*</span>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
 <div class="mc-field-group" style="color: #636363">
-	<label for="mce-FCOUNTRY">Which country are you from? </label>
+	<label for="mce-FCOUNTRY" style="color: #636363">Which country are you from? </label>
 	<input type="text" value="" name="FCOUNTRY" class="" id="mce-FCOUNTRY">
 </div>
 	<div id="mce-responses" class="clear">
