--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <h3>Launching soon!</h3>
 
-      <form id="bookingForm" class="booking-form">
+      <!--<form id="bookingForm" class="booking-form">
         <div class="tmInput">
           <input name="Name" placeHolder="Name" type="text" data-constraints='@NotEmpty @Required @AlphaSpecial'>
         </div>
@@ -65,7 +65,7 @@
         <div class="booking-form_controls">
           <a href="#" class="btn" data-type="submit">Get Notified!</a>
         </div>
-      </form>
+      </form>-->
       
       <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
