--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 <div class="mc-field-group" style="color: #636363">
 	<label for="mce-EMAIL" style="color: #636363">Your Email Address  <span class="asterisk">*</span>
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="color: #000000">
 </div>
 <div class="mc-field-group" style="color: #636363">
 	<label for="mce-FCOUNTRY" style="color: #636363">Which country are you from? </label>
-	<input type="text" value="" name="FCOUNTRY" class="" id="mce-FCOUNTRY">
+	<input type="text" value="" name="FCOUNTRY" class="" id="mce-FCOUNTRY" style="color: #000000">
 </div>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
