--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 	<label for="mce-MMERGE2" style="color: #636363">Which country are you from? </label>
 	<select name="MMERGE2" class="" id="mce-MMERGE2" style="color: #000000">
 	<option value=""></option>
-<option value="United States of America">United States of America</option>
-<option value="Aaland Islands">Aaland Islands</option>
-<option value="Afghanistan">Afghanistan</option>
-<option value="Albania">Albania</option>
+<option style="color: #000000" value="United States of America">United States of America</option>
+<option style="color: #000000" value="Aaland Islands">Aaland Islands</option>
+<option style="color: #000000" value="Afghanistan">Afghanistan</option>
+<option style="color: #000000" value="Albania">Albania</option>
 <option value="Algeria">Algeria</option>
 <option value="American Samoa">American Samoa</option>
 <option value="Andorra">Andorra</option>
