--- a/index.html
+++ b/index.html
@@ -87,24 +87,24 @@
 <div class="mc-field-group">
 	<label for="mce-MMERGE2" style="color: #636363">Which country are you from? </label>
 	<select name="MMERGE2" class="" id="mce-MMERGE2" style="color: #000000">
-	<option style="color: #000000" value=""></option>
-<option style="color: #000000" value="United States of America">United States of America</option>
-<option style="color: #000000" value="Aaland Islands">Aaland Islands</option>
-<option style="color: #000000" value="Afghanistan">Afghanistan</option>
-<option style="color: #000000" value="Albania">Albania</option>
-<option style="color: #000000" value="Algeria">Algeria</option>
-<option style="color: #000000" value="American Samoa">American Samoa</option>
-<option style="color: #000000" value="Andorra">Andorra</option>
-<option style="color: #000000" value="Angola">Angola</option>
-<option style="color: #000000" value="Anguilla">Anguilla</option>
-<option style="color: #000000" value="Antarctica">Antarctica</option>
-<option style="color: #000000" value="Antigua And Barbuda">Antigua And Barbuda</option>
-<option style="color: #000000" value="Argentina">Argentina</option>
-<option style="color: #000000" value="Armenia">Armenia</option>
-<option style="color: #000000" value="Aruba">Aruba</option>
-<option style="color: #000000" value="Australia">Australia</option>
-<option style="color: #000000" value="Austria">Austria</option>
-<option style="color: #000000" value="Azerbaijan">Azerbaijan</option>
+	<option value=""></option>
+<option value="United States of America">United States of America</option>
+<option value="Aaland Islands">Aaland Islands</option>
+<option value="Afghanistan">Afghanistan</option>
+<option value="Albania">Albania</option>
+<option value="Algeria">Algeria</option>
+<option value="American Samoa">American Samoa</option>
+<option value="Andorra">Andorra</option>
+<option value="Angola">Angola</option>
+<option value="Anguilla">Anguilla</option>
+<option value="Antarctica">Antarctica</option>
+<option value="Antigua And Barbuda">Antigua And Barbuda</option>
+<option value="Argentina">Argentina</option>
+<option value="Armenia">Armenia</option>
+<option value="Aruba">Aruba</option>
+<option value="Australia">Australia</option>
+<option value="Austria">Austria</option>
+<option value="Azerbaijan">Azerbaijan</option>
 <option value="Bahamas">Bahamas</option>
 <option value="Bahrain">Bahrain</option>
 <option value="Bangladesh">Bangladesh</option>
