--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<label for="mce-MMERGE2" style="color: #636363">Which country are you from? </label>
 	<select name="MMERGE2" class="" id="mce-MMERGE2" style="color: #000000">
 	<option value=""></option>
-<option value="United States of America">United States of America</option>
+<option value="United States of America" style="color:#000000">United States of America</option>
 <option value="Aaland Islands">Aaland Islands</option>
 <option value="Afghanistan">Afghanistan</option>
 <option value="Albania">Albania</option>
